--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "short-lnk",
+  "name": "notes",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package=cultofcoders:mocha"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
@@ -12,6 +13,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
+    "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -19,5 +21,11 @@
   },
   "engines": {
     "node": "v8.11.4"
+  },
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "expect": "^24.5.0",
+    "react-addons-test-utils": "^15.6.2"
   }
 }
